Auto-mount & UT
- Added auto-mounting of registered repositories on User login
- Added UT for GVFS.Service on Mac

--- a/GVFS/GVFS.Service/GVFS.Service.Windows.csproj
+++ b/GVFS/GVFS.Service/GVFS.Service.Windows.csproj
@@ -69,6 +69,7 @@
     <Compile Include="Handlers\UnregisterRepoHandler.cs" />
     <Compile Include="Handlers\RegisterRepoHandler.cs" />
     <Compile Include="CurrentUser.cs" />
+    <Compile Include="IRepoMountProcess.cs" />
     <Compile Include="ProductUpgradeTimer.cs" />
     <Compile Include="Program.Windows.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
