--- a/GVFS/GVFS.Service/Mac/org.vfsforgit.service.plist
+++ b/GVFS/GVFS.Service/Mac/org.vfsforgit.service.plist
@@ -2,6 +2,11 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+    <key>EnvironmentVariables</key>
+    <dict>
+        <key>PATH</key>
+        <string>/usr/local/bin:/usr/bin:/bin:/usr/sbin:/sbin</string>
+    </dict>
     <key>Label</key>
     <string>org.vfsforgit.service</string>
     <key>ProgramArguments</key>
