Incorporating review comments 1. Added comment in org.vfsforgit.service.plist file about why PATH variable is specified. 2. Removed un-necessary Zero arg Constructors (replaced it with interfaces) required by Moq. 3. Removed verifying RepoRegistry::TraceStatus() 4. Renamed IRepoMountProcess to IRepoMounter 5. Other minor cleanups

--- a/GVFS/GVFS.Service/GVFS.Service.Mac.csproj
+++ b/GVFS/GVFS.Service/GVFS.Service.Mac.csproj
@@ -27,7 +27,8 @@
     <Compile Include="Handlers\MessageHandler.cs" />
     <Compile Include="Handlers\RegisterRepoHandler.cs" />
     <Compile Include="Handlers\UnregisterRepoHandler.cs" />
-    <Compile Include="IRepoMountProcess.cs" />
+    <Compile Include="IRepoMounter.cs" />
+    <Compile Include="IRepoRegistry.cs" />
     <Compile Include="Program.Mac.cs" />
     <Compile Include="RepoRegistration.cs" />
     <Compile Include="RepoRegistry.cs" />
