Remove GVFS.UnitTests.Mac

--- a/GVFS/GVFS.UnitTests.Windows/GVFS.UnitTests.Windows.csproj
+++ b/GVFS/GVFS.UnitTests.Windows/GVFS.UnitTests.Windows.csproj
@@ -153,13 +153,17 @@
       <Project>{1dac3da6-3d21-4917-b9a8-d60c8712252a}</Project>
       <Name>GVFS.Platform.Mac</Name>
     </ProjectReference>
+    <ProjectReference Include="..\GVFS.Platform.POSIX\GVFS.Platform.POSIX.csproj">
+      <Project>{15fae44c-0d21-4312-9fd3-28f05a5ab7a6}</Project>
+      <Name>GVFS.Platform.POSIX</Name>
+    </ProjectReference>
     <ProjectReference Include="..\GVFS.Platform.Windows\GVFS.Platform.Windows.csproj">
       <Project>{4ce404e7-d3fc-471c-993c-64615861ea63}</Project>
       <Name>GVFS.Platform.Windows</Name>
     </ProjectReference>
-    <ProjectReference Include="..\GVFS.Service\GVFS.Service.Windows.csproj">
-      <Project>{b8c1dfba-cafd-4f7e-a1a3-e11907b5467b}</Project>
-      <Name>GVFS.Service</Name>
+    <ProjectReference Include="..\GVFS.Service\GVFS.Service.Mac.csproj">
+      <Project>{03769a07-f216-456b-886b-e07caf6c5e81}</Project>
+      <Name>GVFS.Service.Mac</Name>
     </ProjectReference>
     <ProjectReference Include="..\GVFS.Tests\GVFS.Tests.csproj">
       <Project>{72701bc3-5da9-4c7a-bf10-9e98c9fc8eac}</Project>
@@ -193,12 +197,6 @@
       <Link>Readme.md</Link>
     </None>
   </ItemGroup>
-  <ItemGroup>
-    <Compile Remove="..\GVFS.UnitTests\Service\MacServiceTests.cs" />
-    <EmbeddedResource Remove="..\GVFS.UnitTests\Service\MacServiceTests.cs" />
-    <None Remove="..\GVFS.UnitTests\Service\MacServiceTests.cs" />
-  </ItemGroup>
-
   <ItemGroup>
     <Analyzer Include="..\..\..\packages\StyleCop.Analyzers.1.0.2\analyzers\dotnet\cs\StyleCop.Analyzers.CodeFixes.dll" />
     <Analyzer Include="..\..\..\packages\StyleCop.Analyzers.1.0.2\analyzers\dotnet\cs\StyleCop.Analyzers.dll" />
