--- a/GVFS/GVFS.Service/GVFS.Service.Mac.csproj
+++ b/GVFS/GVFS.Service/GVFS.Service.Mac.csproj
@@ -5,7 +5,7 @@
     <RootNamespace>GVFS.Service.Mac</RootNamespace>
     <AssemblyName>GVFS.Service</AssemblyName>
     <!-- Target netstandard2.0 as well so that .NET Framework unit tests can consume this assembly -->
-    <TargetFrameworks>netcoreapp2.1;netstandard2.0</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0;netcoreapp2.1</TargetFrameworks>
     <Platforms>x64</Platforms>
     <RunTimeIdentifiers>osx-x64</RunTimeIdentifiers>
     <EnableDefaultCompileItems>false</EnableDefaultCompileItems>
