Back out namespace changes

--- a/GVFS/GVFS.Service/GVFS.Service.Mac.csproj
+++ b/GVFS/GVFS.Service/GVFS.Service.Mac.csproj
@@ -2,7 +2,7 @@
   <Import Project="..\GVFS.Build\GVFS.cs.props" />
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <RootNamespace>GVFS.Service.Mac</RootNamespace>
+    <RootNamespace>GVFS.Service</RootNamespace>
     <AssemblyName>GVFS.Service</AssemblyName>
     <!-- Target netstandard2.0 as well so that .NET Framework unit tests can consume this assembly -->
     <TargetFrameworks>netstandard2.0;netcoreapp2.1</TargetFrameworks>
