--- a/ProjFS.Mac/PrjFS.xcodeproj/xcshareddata/xcschemes/Build All.xcscheme
+++ b/ProjFS.Mac/PrjFS.xcodeproj/xcshareddata/xcschemes/Build All.xcscheme
@@ -20,6 +20,20 @@
                ReferencedContainer = "container:PrjFS.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "NO"
+            buildForProfiling = "NO"
+            buildForArchiving = "NO"
+            buildForAnalyzing = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "264E723822930E660059E150"
+               BuildableName = "PrjFSLibTests.xctest"
+               BlueprintName = "PrjFSLibTests"
+               ReferencedContainer = "container:PrjFS.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
       </BuildActionEntries>
    </BuildAction>
    <TestAction
@@ -44,6 +58,20 @@
             BlueprintName = "PrjFSKextTests"
             ReferencedContainer = "container:PrjFS.xcodeproj">
          </BuildableReference>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "4391F8D421E430CF0008103C"
+            BuildableName = "libPrjFSLib.dylib"
+            BlueprintName = "PrjFSLib"
+            ReferencedContainer = "container:PrjFS.xcodeproj">
+         </BuildableReference>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "264E723822930E660059E150"
+            BuildableName = "PrjFSLibTests.xctest"
+            BlueprintName = "PrjFSLibTests"
+            ReferencedContainer = "container:PrjFS.xcodeproj">
+         </BuildableReference>
       </CodeCoverageTargets>
       <Testables>
          <TestableReference
@@ -53,6 +81,16 @@
                BlueprintIdentifier = "F5E39C7621F1118D006D65C2"
                BuildableName = "PrjFSKextTests.xctest"
                BlueprintName = "PrjFSKextTests"
+               ReferencedContainer = "container:PrjFS.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "264E723822930E660059E150"
+               BuildableName = "PrjFSLibTests.xctest"
+               BlueprintName = "PrjFSLibTests"
                ReferencedContainer = "container:PrjFS.xcodeproj">
             </BuildableReference>
          </TestableReference>
