--- a/ProjFS.Mac/PrjFSKext/Info.plist
+++ b/ProjFS.Mac/PrjFSKext/Info.plist
@@ -15,9 +15,9 @@
 	<key>CFBundlePackageType</key>
 	<string>KEXT</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.0</string>
+	<string>$(PRJFS_VERSION)</string>
 	<key>CFBundleVersion</key>
-	<string>1</string>
+	<string>$(PRJFS_MAJOR_VERSION)</string>
 	<key>NSHumanReadableCopyright</key>
 	<string>Copyright © Microsoft</string>
 	<key>IOKitPersonalities</key>
