--- a/GVFS/GVFS.CommandHook/GVFS.CommandHook.Windows.vcxproj
+++ b/GVFS/GVFS.CommandHook/GVFS.CommandHook.Windows.vcxproj
@@ -116,6 +116,7 @@
     <ClInclude Include="Process.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="stdafx.h" />
+    <ClInclude Include="String.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="Upgrader.h" />
   </ItemGroup>
