--- a/GVFS/GVFS.CommandHook/GVFS.CommandHook.Windows.vcxproj.filters
+++ b/GVFS/GVFS.CommandHook/GVFS.CommandHook.Windows.vcxproj.filters
@@ -57,6 +57,9 @@
     <ClInclude Include="FileSystem.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="String.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
